data/derived/comb/progs/unify/prog8880.ml.out
Characters 61-65:
  if b!=b' then true else false), b);;
                ^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
